Opened 13 years ago
Closed 13 years ago
#3001 closed defect (fixed)
amr: abort with forced codec
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | amr crash abort |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
(gdb) r -acodec mp3 -i ./sound.amr
The program being debugged has been started already.
Start it from the beginning? (y or n) y
Starting program: /media/sdb1/ffmpeg-HEAD-93439e8/ffmpeg_g -acodec mp3 -i ./sound.amr
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
ffmpeg version 2.0-93439e8 Copyright (c) 2000-2013 the FFmpeg developers
built on Sep 18 2013 23:23:15 with gcc 4.7 (Debian 4.7.2-5)
configuration: --disable-yasm --enable-gpl --disable-ffprobe --disable-ffserver
libavutil 52. 44.100 / 52. 44.100
libavcodec 55. 31.101 / 55. 31.101
libavformat 55. 18.100 / 55. 18.100
libavdevice 55. 3.100 / 55. 3.100
libavfilter 3. 86.101 / 3. 86.101
libswscale 2. 5.100 / 2. 5.100
libswresample 0. 17.103 / 0. 17.103
libpostproc 52. 3.100 / 52. 3.100
Assertion 0 failed at libavformat/amr.c:136
Program received signal SIGABRT, Aborted.
0xb7e5e667 in *__GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
64 ../nptl/sysdeps/unix/sysv/linux/raise.c: No such file or directory.
(gdb) bt
#0 0xb7e5e667 in *__GI_raise (sig=6)
at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#1 0xb7e61a52 in *__GI_abort () at abort.c:92
#2 0x0813f2d0 in amr_read_packet (s=0x910eee0, pkt=0xbffff078)
at libavformat/amr.c:136
#3 0x082377e7 in ff_read_packet (s=s@entry=0x910eee0,
pkt=pkt@entry=0xbffff078) at libavformat/utils.c:658
#4 0x0823a129 in read_frame_internal (s=s@entry=0x910eee0,
pkt=pkt@entry=0xbffff258) at libavformat/utils.c:1316
#5 0x0823dd65 in avformat_find_stream_info (ic=0x910eee0, options=0x910fb00)
at libavformat/utils.c:2801
#6 0x080a66b5 in open_input_file (o=o@entry=0xbffff53c,
filename=<optimized out>) at ffmpeg_opt.c:809
#7 0x080a4ed7 in open_files (inout=inout@entry=0x88e725b "input",
open_file=open_file@entry=0x80a62d0 <open_input_file>,
l=<error reading variable: Unhandled dwarf expression opcode 0xfa>,
l=<error reading variable: Unhandled dwarf expression opcode 0xfa>)
at ffmpeg_opt.c:2494
#8 0x080ad0e9 in ffmpeg_parse_options (argc=argc@entry=5,
argv=argv@entry=0xbffff9c4) at ffmpeg_opt.c:2531
#9 0x080a25da in main (argc=5, argv=0xbffff9c4) at ffmpeg.c:3393
(gdb)
Attachments (1)
Change History (3)
by , 13 years ago
comment:1 by , 13 years ago
| Component: | undetermined → avformat |
|---|---|
| Keywords: | amr crash abort added |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
Note:
See TracTickets
for help on using tickets.



Patch sent.