Remove an incorrect and unneeded assert in the amr demuxer.

Asserting a specific codec is not correct since libavformat
allows forcing a codec, an equivalent check is in the
following line.

Fixes ticket #3001.